UI-1740: Не работает TextWrapping для TablePanel #resolved

--- a/app/styles/controls/label.less
+++ b/app/styles/controls/label.less
@@ -7,4 +7,5 @@
 
 .pl-text-wrapping{
   white-space: pre-wrap;
+  word-wrap: break-word;
 }
